[tool.poetry]
name = "repl_python3_Ace-Bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.4"
discord = "^1.7.3"
Flask = "^2.0.2"
helpers = "^0.2.0"
formats = "^0.1.1"
parsedatetime = "^2.6"
youtube_dl = "^2021.6.6"
motor = "^2.5.1"
jishaku = "^2.3.2"
simpcalci = "^0.0.2"
humanize = "^3.13.1"
humanfriendly = "^10.0"
dnspython = "^2.1.0"
typing-extensions = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
